--- a/ScrollView Image Galleries/Base.lproj/Main.storyboard
+++ b/ScrollView Image Galleries/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MTi-Oo-hkD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -34,11 +34,12 @@
                     </view>
                     <connections>
                         <outlet property="scrollView" destination="eDb-1W-6O7" id="Xbk-od-ojs"/>
+                        <segue destination="MTi-Oo-hkD" kind="show" identifier="zoomSegue" id="LmX-Z3-q1n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="116" y="118.29085457271366"/>
+            <point key="canvasLocation" x="94" y="196"/>
         </scene>
         <!--Zoom View Controller-->
         <scene sceneID="vXd-Hc-pc2">
@@ -67,6 +68,7 @@
                         <viewLayoutGuide key="safeArea" id="gZG-Vl-gQs"/>
                     </view>
                     <connections>
+                        <outlet property="imageView" destination="Seq-EX-xRx" id="rAD-7r-rD5"/>
                         <outlet property="scrollView" destination="NRj-27-sSn" id="nuw-pi-wc3"/>
                     </connections>
                 </viewController>
